# labs2

./: .gitignore  CMakeLists.txt  README.md
src/: test.c
src/lab1/: main.c  page.html  sort.c  sort.h  utils.c  utils.h
src/lab2/: compress.c  compress.h  decompress.c  decompress.h  linked_lists.c  linked_lists.h  main.c  main.compressor.c  main.decompressor.c  utils.c  utils.h
src/lab3/: bitmap.c  bitmap.h  filters.c  filters.h  main.c
src/lab4/: main.c  tree.c  tree.h
src/lab4/files/: tree.txt
src/lab5/: cache.c  cache.h  config.h  main.c  records.txt  tasks.c  tasks.h  utils.c  utils.h
